# fast-utf8-multi-replace

./: CMakeLists.txt  README.md  main.cpp  replace.cpp  replace.hpp
test/: CMakeLists.txt  ascii_dict.tsv  multiple_char_dict.tsv  multiple_char_multiple_row_dict.tsv  replace_test.cpp  single_diff_char_dict.tsv  single_diff_last_char_dict.tsv  single_self_char_dict.tsv
